--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -89,8 +89,9 @@
     android:layout_width="0dp"
     android:layout_height="0dp"
     android:layout_marginTop="@dimen/half_control_spacing"
-    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
     android:orientation="vertical"
+    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+    app:spanCount="1"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintBottom_toBottomOf="parent"
