--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -5,11 +5,16 @@
   android:id="@+id/mobile_navigation"
   app:startDestination="@+id/navigation_play">
 
+  <action
+    android:id="@+id/show_profle"
+    app:destination="@+id/navigation_profile"/>
+
   <fragment
     android:id="@+id/navigation_play"
     android:label="@string/title_play"
     android:name="edu.cnm.deepdive.codebreaker.controller.PlayFragment"
-    tools:layout="@layout/fragment_play"/>
+    tools:layout="@layout/fragment_play">
+  </fragment>
 
   <fragment
     android:id="@+id/navigation_scoreboard"
@@ -22,4 +27,9 @@
     android:label="@string/title_history"
     android:name="edu.cnm.deepdive.codebreaker.controller.HistoryFragment"
     tools:layout="@layout/fragment_history"/>
+
+  <dialog
+    android:id="@+id/navigation_profile"
+    android:name="edu.cnm.deepdive.codebreaker.controller.ProfileFragment"/>
+
 </navigation>
